# rust-materials-simulator

./: .gitignore  Cargo.toml  FEATURES.md  LICENSE  README.md  build-wasm.sh  start-server.sh
.cargo/: config.toml
.github/workflows/: deploy.yml
config/: materials.toml  menu.toml  options.toml
src/: config.rs  core.rs  main.rs  plugins.rs  render.rs  utils.rs
src/config/: config.rs  loader.rs  options.rs
src/config/options/: interaction.rs  rendering.rs  simulation.rs
src/core/: behavior.rs  cell.rs  material.rs  registry.rs  state.rs  world.rs
src/core/behaviors/: acid.rs  granular.rs  liquid.rs  mod.rs  static_behavior.rs
src/render/: ui.rs  window.rs
src/render/ui/: action_buttons.rs  brush_size.rs  button.rs  grid.rs  materials.rs  menu.rs  sidebar.rs
src/utils/: color.rs  layout.rs  position.rs  size.rs
web/: index.html
web/config/: start.toml
